--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Lêɠêɳ̃dẞø†",
+  "name": "LEGENDBOT-V9by LEGEND-LX",
   "description": "Tнє ßєѕτ υѕєяϐοτ мα∂є ϐγ Lêɠêɳ̃dẞøY. Made with Love And By Python Language With Hardwork... ❤ ",
   "logo": "https://telegra.ph/file/c018738c34cd048d9b6d8.jpg",
   "keywords": [
